# IVEx

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  cppproject.toml
cmake/: openmp.cmake  version.cmake
examples/: data.iv  model.model  outfile.csv  output.csv
include/ivex/: Data.hpp  Extraction.hpp  IV.hpp  Input.hpp  Output.hpp
scripts/: conan_create.sh  conan_upload.sh
src/: CMakeLists.txt  Data.cpp  Extraction.cpp  IV.cpp  Input.cpp  Output.cpp  ivex.cpp
tests/unit/: CMakeLists.txt  Data.cpp  Extraction.cpp  IV.cpp  Input.cpp  Output.cpp
